--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-actuator</artifactId>
 	    </dependency>
+	  <dependency>
+		  <groupId>org.zeroturnaround</groupId>
+		  <artifactId>zt-exec</artifactId>
+		  <version>1.11</version>
+	  </dependency>
 	<dependency>
 		<groupId>com.h2database</groupId>
 		<artifactId>h2</artifactId>
@@ -148,6 +153,18 @@
 		<artifactId>springfox-data-rest</artifactId>
 		<version>2.7.0</version>
 	</dependency>
+	  <dependency>
+		  <groupId>com.vaadin.external.google</groupId>
+		  <artifactId>android-json</artifactId>
+		  <version>0.0.20131108.vaadin1</version>
+		  <scope>compile</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.vaadin.external.google</groupId>
+		  <artifactId>android-json</artifactId>
+		  <version>0.0.20131108.vaadin1</version>
+		  <scope>compile</scope>
+	  </dependency>
   </dependencies>
   
 </project>
